--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlayOverviewActivity"
+        <activity
+            android:name=".PlayOverviewActivity"
             android:label="STAGES" />
-        <activity android:name=".PlayActivity"
+        <activity
+            android:name=".PlayActivity"
             android:label="PLAY"
-            android:windowSoftInputMode="adjustNothing"/>
-        <activity android:name=".InstructionsActivity"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".InstructionsActivity"
             android:label="INSTRUCTIONS" />
-        <activity android:name=".AchievementsActivity"
+        <activity
+            android:name=".AchievementsActivity"
             android:label="ACHIEVEMENTS" />
-        <activity android:name=".ScoreOverviewActivity"
-            android:label="SCORES"> </activity>
+        <activity
+            android:name=".ScoreOverviewActivity"
+            android:label="SCORES"></activity>
+        <activity android:name=".SignInActivity"></activity>
     </application>
 
 </manifest>
