--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name=".PlayActivity"
             android:label="PLAY"
-            android:windowSoftInputMode="adjustNothing" />
+            android:windowSoftInputMode="adjustNothing"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".InstructionsActivity"
             android:label="INSTRUCTIONS" />
@@ -33,8 +34,10 @@
             android:label="ACHIEVEMENTS" />
         <activity
             android:name=".ScoreOverviewActivity"
-            android:label="LEADERBOARD"></activity>
-        <activity android:name=".SignInActivity"></activity>
+            android:label="LEADERBOARD">
+        </activity>
+        <activity android:name=".SignInActivity">
+        </activity>
     </application>
 
 </manifest>
